# tarea2

./: .gitignore  README.md  main.py  pyproject.toml  tree.txt
data/predictions/: submission.csv
data/prep/: meta.json  test_features.parquet  test_pairs.parquet  valid.parquet
notebooks/: Entendimientodelos_datosEDA.ipynb  FeatureEngineering.ipynb  Modeling.ipynb  SimulationComparation.ipynb
src/: inference.py  prep.py  train.py
